--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ VITE_APP_API_LOGIN=https://service.laserbluforms.signos-framework.com/GenericWeb
 VITE_APP_API_cantidadDeTurnos=https://service.laserbluforms.signos-framework.com/GenericWeb?proctoken=SPREPORTEAREASDASBOARD
 
 VITE_APP_API_estatusColaboradores=https://service.laserbluforms.signos-framework.com/GenericWeb?proctoken=spReporteEstacionesEstatusDashBoard
+
+VITE_APP_API_estatusOperadores=https://service.laserbluforms.signos-framework.com/GenericWeb?proctoken=SPREPORTEUSUARIOSESTATUSV2
