--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dashboard",
+  "homepage": "http://win-gv0qm4l1f9q/DahboardWeb",
   "private": true,
   "version": "0.0.0",
   "type": "module",
