--- a/.env
+++ b/.env
@@ -8,6 +8,8 @@ VITE_APP_API_LOGIN=GenericWeb?proctoken=spLoginUser&ProcParams=
 
 VITE_APP_API_cantidadDeTurnos=GenericWeb?proctoken=SPREPORTEAREASDASBOARD
 
+VITE_APP_API_turnosTransferidos=GenericWeb?proctoken=spReporteAreasTransferenciasDashBoard
+
 VITE_APP_API_estatusColaboradores=GenericWeb?proctoken=spReporteEstacionesEstatusDashBoard
 
 VITE_APP_API_estatusOperadores=GenericWeb?proctoken=SPREPORTEUSUARIOSESTATUSV2
