--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
-    "sweetalert": "^2.1.2"
+    "sweetalert2": "^11.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
