--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VITE_APP_BASEURL=https://service.laserbluforms.signos-framework.com/
-# VITE_APP_BASEURL=http://win-gv0qm4l1f9q/TurnosWebAPI/
+# VITE_APP_BASEURL=https://service.laserbluforms.signos-framework.com/
+VITE_APP_BASEURL=http://win-gv0qm4l1f9q/TurnosWebAPI/
 # VITE_APP_BASEURL=http://TurnosApp/TurnosWebAPI/
 # VITE_APP_BASEURL=http://DESKTOP-MJ52E54/TurnosWebAPI/
 
