--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# VITE_APP_BASEURL=https://service.laserbluforms.signos-framework.com/
-VITE_APP_BASEURL=http://win-gv0qm4l1f9q/TurnosWebAPI/
+VITE_APP_BASEURL=https://service.laserbluforms.signos-framework.com/
+# VITE_APP_BASEURL=http://win-gv0qm4l1f9q/TurnosWebAPI/
 # VITE_APP_BASEURL=http://TurnosApp/TurnosWebAPI/
 # VITE_APP_BASEURL=http://DESKTOP-MJ52E54/TurnosWebAPI/
 
@@ -16,3 +16,5 @@ VITE_APP_API_estatusColaboradores=GenericWeb?proctoken=spReporteEstacionesEstatu
 VITE_APP_API_estatusOperadores=GenericWeb?proctoken=SPREPORTEUSUARIOSESTATUSV2
 
 VITE_APP_API_estatusEstaciones=GenericWeb?proctoken=spReporteEstatusEstaciones
+
+VITE_APP_API_historicoTurno=GenericWeb?proctoken=spHistoricoTurno
