--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "gridjs": "^6.0.6",
+    "gridjs-react": "^6.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
